--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			var imageArray = ["pic/pic1.png", "pic/pic2.png", "pic/pic3.png", "pic/pic4.png", "pic/pic5.png", "pic/pic6.png", 
 			"pic/pic7.png", "pic/pic8.png"];
 			var imageIndex = 0;
-			var txtArray = ["i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist"];
+			var txtArray = ["I am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist","i am grateful that you exist"];
 			 var len = imageArray.length;
 			var t = 0;
 		</script>
